# nushift

./: .gitignore  COPYING  Cargo.toml  README.md
examples/: build-parallel.ps1  build-parallel.sh  build_parallel.sh  justfile
examples/ebreak-test/: ebreak  ebreak.s  justfile
examples/hello-world/: build.zig  build.zig.zon  build_nushift.zig
examples/hello-world/src/: AccessibilityTree.zig  GfxOutput.zig  accessibility_tree.ron  gfx_output.zig  hello-world.qoi  hello_world.qoi  main.zig  output.zig  writing.zig
examples/hello-world/src/assets/: hello_world.qoi
examples/nothing-nushift-app/: build.zig
examples/nothing-nushift-app/src/: main.zig  os_nushift.zig  start_nushift.zig
examples/rollback-test/: build.zig  build_nushift.zig  justfile
examples/rollback-test/src/: main.zig
examples/shm-nushift-app/: build.zig  build_nushift.zig  justfile
examples/shm-nushift-app/src/: main.zig
nsq/: .gitignore  Cargo.toml  README.md
nsq/examples/: client.rs  generate_your_secret.rs  generate_your_secrets.rs  server.rs
nsq/src/: lib.rs  quinn_noise.rs  quinn_snow.rs  snow_x448_resolver.rs  x448_resolver.rs
nsq/src/quinn_noise/: config.rs  fixed_buffer.rs  mod.rs  session.rs
nulib/src/: os_nushift.zig  start_nushift.zig
nushift/: Cargo.toml  build.rs
nushift-core/: Cargo.toml
nushift-core/src/: app_global_deferred_space.rs  debug_print.rs  deferred_space.rs  elf_loader.rs  gfx_space.rs  hypervisor.rs  hypervisor_event.rs  lib.rs  nushift_subsystem.rs  process_control_block.rs  protected_memory.rs  register_ipc.rs  reusable_id_pool.rs  riscv_machine_wrapper.rs  rollback_chain.rs  tab.rs  tab_context.rs  title_space.rs  usize_or_u64.rs
nushift-core/src/accessibility_tree_space/: accessibility_tree.rs  mod.rs
nushift-core/src/deferred_space/: app_global_deferred_space.rs  mod.rs
nushift-core/src/hypervisor/: hypervisor.rs  hypervisor_event.rs  mod.rs  tab.rs  tab_context.rs
nushift-core/src/shm_space/: acquisitions_and_page_table.rs  mod.rs
nushift/resources/i18n/en-AU/: builtin.ftl
nushift/src/: global_key_command_handler.rs  main.rs  model.rs  reusable_id_pool.rs  selector.rs  selectors.rs  theme.rs  widget.rs  widgets.rs
nushift/src/controller/: click_inverse.rs  hypervisor_command_handler.rs  mod.rs  window_scale_change_handler.rs
nushift/src/model/: client_framebuffer.rs  combined.rs  mod.rs  root_data.rs  scale_and_size.rs  tab_data.rs  tabs.rs
nushift/src/widget/: button.rs  click_inverse.rs  client_area.rs  close_button.rs  hypervisor_command_handler.rs  mod.rs  tab.rs  tab_list.rs  top_bar.rs  value.rs
nushift/src/widget/button/: close_button.rs  hover_background.rs  hover_transition.rs  new_tab_button.rs
nushift/src/widget_data/: root_data.rs
nushift/src/widgets/: tab_list.rs  top_bar.rs
reusable-id-pool/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md
reusable-id-pool/src/: lib.rs  reusable_id_pool.rs  reusable_id_pool_manual.rs
