[package]
name = "nsq"
version = "0.1.0"
authors = ["David Pollack <david@pollack.id.au>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
quinn-proto = { version = "0.10.6", default-features = false, features = ["log"] }
rand = "0.7.3"
snow = { version = "0.9.6", features = ["pqclean_kyber1024"] }
x448 = "0.6.0"
