[package]
name = "nsq"
version = "0.1.0"
authors = ["David Pollack <david@pollack.id.au>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: I would like to not explicitly import aead here. Remove it if/when
# chacha20poly1305 re-exports the aead/bytes feature as bytes
aead = { version = "0.5.2", features = ["bytes"] }
chacha20 = "0.9.1"
chacha20poly1305 = "0.10.1"
hex-literal = "0.4.1"
hkdf = "0.12.4"
itertools = "0.13.0"
quinn = { version = "0.11.2", default-features = false, features = ["log"] }
quinn-proto = { version = "0.11.3", default-features = false, features = ["log"] }
rand = "0.7.3"
sha2 = "0.10.8"
snafu = "0.8.4"
snafu-cli-debug = "0.1.1"
snow = { version = "0.9.6", features = ["pqclean_kyber1024", "risky-raw-split"] }
trait-variant = "0.1.2"
x448 = "0.6.0"

[dev-dependencies]
bytes = "1"
h3 = "0.0.6"
h3-quinn = "0.0.7"
http = "1"
postcard = { version = "1.0.8", features = ["use-std"] }
quinn = { version = "0.11.2", default-features = false, features = ["log", "runtime-smol"] }
serde = { version = "1", features = ["derive", "std"] }
serde-big-array = "0.5.1"
smol = "2"
tracing-subscriber = "0.3"
