[package]
name = "nushift-core"
version = "0.1.0"
authors = ["David Pollack <david@pollack.id.au>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.3"
ckb-vm = "0.23.2"
elfloader = "0.16.0"
itertools = "0.11.0"
memmap2 = "0.6.2"
num_enum = "0.5.7"
postcard = "1.0.7"
reusable-id-pool = { path = "../reusable-id-pool" }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
snafu = "0.7.1"
snafu-cli-debug = "0.1.1"
tracing = "0.1.37"
