[package]
name = "nushift"
version = "0.1.0"
authors = ["David Pollack <david@pollack.id.au>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Use a revision a bit newer than 0.8.3 that fixes the window light theme detection being backwards
druid = { git = "https://github.com/linebender/druid.git", rev = "af94bdd02798c84f7927e898b1ed28ebcec16b30", features = ["im"] }
nushift-core = { path = "../nushift-core" }
tracing = "0.1.37"
reusable-id-pool = { path = "../reusable-id-pool" }

[build-dependencies]
static_vcruntime = "2.0"
