[package]
name = "reusable-id-pool"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked-hash-map = { version = "0.5.6", optional = true }

[features]
default = ["std"]
std = ["dep:linked-hash-map"]
