[package]
name = "reusable-id-pool"
version = "0.1.1"
authors = ["David Pollack <david@pollack.id.au>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/davepollack/nushift/tree/master/reusable-id-pool"
documentation = "https://docs.rs/reusable-id-pool"
description = "A pool for RAII IDs"
keywords = ["id", "pool", "raii"]
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked-hash-map = { version = "0.5.6", optional = true }

[features]
default = ["std"]
std = ["dep:linked-hash-map"]
